argocd/manifests/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: onoe-k8s.internal
      http:
        paths:
          - path: /argocd
            backend:
              serviceName: argocd-server
              servicePort: 443
